- `confirm`: added confirmation prompts for irreversible actions on the trade screen
- `confirm`: added confirmation prompt for deleting a uniform
- `confirm`: added confirmation prompt for convicting a criminal
- `confirm`: added confirmation prompt for re-running the embark site finder
- `gui/autobutcher`: interface redesigned to better support mouse control
- `gui/launcher`: now persists the most recent 32KB of command output even if you close it and bring it back up
- `gui/quickcmd`: clickable buttons for command add/remove/edit operations

## Removed

# 50.11-r4

## New Tools
- `build-now`: (reinstated) instantly complete unsuspended buildings that are ready to be built

## Fixes
- `combine`: prevent stack sizes from growing beyond quantities that you would normally see in vanilla gameplay

## Misc Improvements
- `caravan`: enable searching within containers in trade screen when in "trade bin with contents" mode

# 50.11-r3

## New Tools
- `sync-windmills`: synchronize or randomize movement of active windmills
- `trackstop`: (reimplemented) integrated overlay for changing track stop and roller settings after construction

## New Features
- `gui/design`: show selected dimensions next to the mouse cursor when designating with vanilla tools, for example when painting a burrow or designating digging
- `quickfort`: new ``burrow`` blueprint mode for designating or manipulating burrows
- `unforbid`: now ignores worn and tattered items by default (X/XX), use -X to bypass
- `fix/dead-units`: gained ability to scrub dead units from burrow membership lists

## Fixes
- `gui/unit-syndromes`: show the syndrome names properly in the UI
- `emigration`: fix clearing of work details assigned to units that leave the fort

## Misc Improvements
- `warn-stranded`: don't warn for units that are temporarily on unwalkable tiles (e.g. as they pass under a waterfall)

## Removed